# scm-rs

./: Cargo.toml  README.md  flake.nix  install_stl.fish  install_stl.sh
examples/: environment.p.scm  variable.p.scm
libscm/: bool.p.scm  const.p.scm  functional.p.scm  lib.p.scm  package.p.scm  sys.p.scm
src/: interpreter.rs  lexer.rs  main.rs  package_manage.rs  repl.rs  types.rs
