[package]
name = "scm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
clap = { version = "4.0.27", features = ["derive"] }
itertools = "0.10.5"
reqwest = {version = "0.11.13", features = ["blocking", "json"]}
regex = "1.7.0"
#git2 = "0.15.0"
serde_json = "1.0.89"
serde = { version = "1.0.148", features = ["derive"] }
# libffi = "3.1.0"
